# ExplicitlyAudioTech

./: .gitignore  BROWSER_AUDIO_GUIDE.md  README.md
browser-extension/: IMPLEMENTATION_COMPLETE.md  README.md  background.js  manifest.json  popup.html  popup.js
desktop/: BUILDING.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  DRIVER_SETUP.md  IMPLEMENTATION_STATUS.md  INTEGRATION_STATUS.md  PROJECT_COMPLETE.md  README.md  WHISPER_SETUP.md
desktop/Models/: profanity_en.txt
desktop/Source/: AudioEngine.cpp  AudioEngine.h  LyricsAlignment.cpp  LyricsAlignment.h  MainComponent.cpp  MainComponent.h  TimestampRefiner.cpp  TimestampRefiner.h
hardware/: ARCHITECTURE.md  BUILD.md  CMakeLists.txt  DESKTOP_VS_HARDWARE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  README.md  config.yaml.example  explicitly.service
hardware/scripts/: build_explicitly.sh  build_whisper.sh  deploy.sh  download_models.sh  setup_orangepi.sh
hardware/src/: AlsaAudioEngine.cpp  AlsaAudioEngine.h  AudioProcessor.cpp  AudioProcessor.h  HttpApiServer.h  main.cpp
website/: .env.example  DEPLOYMENT_GUIDE.md  MoBamba.txt  OPTIMIZATION_SUMMARY.md  README.md  SETUP_WEB.md  WEB_FLOW_DIAGRAM.md  WEB_GUIDE.html  explicitly-key.pem  gunicorn_config.py  kingvon.txt  nginx.conf  requirements-prod.txt  requirements.txt  start_web.py
website/config/: settings.yaml
website/deploy/: QUICK_START.md  app_setup.sh  aws_setup.sh  render.yaml
website/explicitly/: __init__.py  __main__.py  censor.py  cli.py  detect.py  lyrics_align.py  quality_analyzer.py  remix.py  separate.py  separate_wrapper.py  stable_transcribe.py  transcribe_align.py  utils_audio.py  web.py  word_logger.py
website/explicitly/static/: script.js  style.css
website/explicitly/templates/: index.html
website/lexicons/: profanity_en.txt
